[package]
name = "motsu-tutorial"
version = "0.1.11"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/0xNeshi/motsu-tutorial"
repository = "https://github.com/0xNeshi/motsu-tutorial"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Motsu test examples"

[dependencies]
alloy-primitives = "=0.8.20"
alloy-sol-types = "=0.8.20"
stylus-sdk = "0.9.0"
# we use the latest alpha release to get the latest features and fixes
openzeppelin-stylus = "0.2.0-rc.0"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"
motsu = "0.9.0"
alloy-signer = "0.11.1"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
contract_to_contract = []
erc20 = []
vault = []
vm_env = []

[[bin]]
name = "motsu-tutorial"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
